--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -3,3 +3,6 @@
 @import './base/fonts.scss';
 @import './base/typography.scss';
 @import './variables.scss';
+@import '../blocks/page/page.scss';
+@import '../blocks/content/content.scss';
+@import '../blocks/header/header.scss';
