feat: создать стили для инпутов формы
реализовать float label для инпутов

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -6,3 +6,5 @@
 @import '../blocks/page/page.scss';
 @import '../blocks/content/content.scss';
 @import '../blocks/header/header.scss';
+@import '../blocks/section-resume/section-resume.scss';
+@import '../blocks/form/form.scss';
