feat: вынести инпут в отдельный блок
создать для стили для инпута
вынести его из блока form

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -8,3 +8,4 @@
 @import '../blocks/header/header.scss';
 @import '../blocks/section-resume/section-resume.scss';
 @import '../blocks/form/form.scss';
+@import '../blocks/input/input.scss';
