feat: создать стили для checkbox
вынести checkbox из блока form
создать стили для блока checkbox

--- a/src/blocks/form/form.scss
+++ b/src/blocks/form/form.scss
@@ -3,4 +3,17 @@
   flex-direction: column;
   gap: 15px;
   padding-top: 26px;
+
+  &_checkbox {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    padding-top: 60px;
+    gap: 36px 10px;
+  }
+
+  &__fieldset {
+    margin: 0;
+    padding: 0;
+    border: 0;
+  }
 }
