--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -9,3 +9,4 @@
 @import '../blocks/section-resume/section-resume.scss';
 @import '../blocks/form/form.scss';
 @import '../blocks/input/input.scss';
+@import '../blocks/checkbox/checkbox.scss';
