feat: создать блок slaider
вынести slider из form
создать стили для slider

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -10,3 +10,8 @@
 @import '../blocks/form/form.scss';
 @import '../blocks/input/input.scss';
 @import '../blocks/checkbox/checkbox.scss';
+@import '../blocks/slider/slider.scss';
+
+body {
+  margin: 0;
+}
