--- a/src/blocks/section-resume/section-resume.scss
+++ b/src/blocks/section-resume/section-resume.scss
@@ -7,6 +7,11 @@
     grid-template-columns: 1fr;
   }
 
+  &_js {
+    display: flex;
+    flex-direction: column;
+  }
+
   &__title {
     margin-bottom: 20px;
   }
