--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -11,6 +11,7 @@
 @import '../blocks/input/input.scss';
 @import '../blocks/checkbox/checkbox.scss';
 @import '../blocks/slider/slider.scss';
+@import '../blocks/textarea/textarea.scss';
 
 body {
   margin: 0;
