--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -12,6 +12,7 @@
 @import '../blocks/checkbox/checkbox.scss';
 @import '../blocks/slider/slider.scss';
 @import '../blocks/textarea/textarea.scss';
+@import '../blocks/radio/radio.scss';
 
 body {
   margin: 0;
