fix: исправить ошибку в стилях textarea
исправить выход за пределы разметки page блока textare

--- a/src/blocks/textarea/textarea.scss
+++ b/src/blocks/textarea/textarea.scss
@@ -8,6 +8,7 @@
     resize: both;
     min-height: 373px;
     line-height: 20px;
+    box-sizing: border-box;
 
     &[contenteditable]:empty::before {
       content: 'Введите текст';
