feat: создать блок button
написать стили для button
настроить стилизацию в form__button

--- a/src/blocks/form/form.scss
+++ b/src/blocks/form/form.scss
@@ -22,4 +22,14 @@
     padding: 0;
     border: 0;
   }
+
+  &__button {
+    width: 150px;
+    height: 46px;
+    border-radius: 23px;
+    grid-column: 2/3;
+    background-color: #000000;
+    color: #83e80a;
+    font-size: 20px;
+  }
 }
