--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -13,6 +13,7 @@
 @import '../blocks/slider/slider.scss';
 @import '../blocks/textarea/textarea.scss';
 @import '../blocks/radio/radio.scss';
+@import '../blocks/button/button.scss';
 
 body {
   margin: 0;
