feat: улучшить стили
добавить переменные цветов
заменить цвета на переменные в стилях
изменить ширину у page
добавить margin-bottom у content

--- a/src/blocks/checkbox/checkbox.scss
+++ b/src/blocks/checkbox/checkbox.scss
@@ -39,7 +39,7 @@
     }
 
     &:focus + label:before {
-      box-shadow: 0 0 0 2px #000000;
+      box-shadow: 0 0 0 2px $color-primary;
     }
 
     &:checked + label:before {
