--- a/src/blocks/form/form.scss
+++ b/src/blocks/form/form.scss
@@ -28,8 +28,8 @@
     height: 46px;
     border-radius: 23px;
     grid-column: 2/3;
-    background-color: #000000;
-    color: #83e80a;
+    background-color: $color-primary;
+    color: $color-secondary;
     font-size: 20px;
   }
 }
