--- a/src/blocks/header/header.scss
+++ b/src/blocks/header/header.scss
@@ -1,8 +1,16 @@
 .header {
   margin: 54px 0 170px;
 
+  @media (max-width: $screen-lg) {
+    margin: 20px 0 80px;
+  }
+
   &__title {
     line-height: 157%;
     margin: 110px 0 0;
+
+    @media (max-width: $screen-lg) {
+      margin: 50px 0 0;
+    }
   }
 }
