--- a/src/blocks/slider/slider.scss
+++ b/src/blocks/slider/slider.scss
@@ -1,5 +1,5 @@
 .slider {
-  gap: 28px;
+  gap: 16px;
   display: flex;
   flex-direction: column;
 
@@ -16,6 +16,15 @@
       grid-template-columns: 2fr 4fr 4fr 2fr;
       gap: 88px;
       align-items: baseline;
+
+      @media (max-width: $screen-lg) {
+        gap: 10px;
+      }
+
+      @media (max-width: $screen-md) {
+        font-size: 15px;
+        line-height: 150%;
+      }
     }
   }
 
@@ -48,8 +57,8 @@
     cursor: default;
 
     &:checked {
-      width: 22px;
-      height: 22px;
+      width: 20px;
+      height: 20px;
     }
 
     & + .slider__span {
@@ -82,11 +91,11 @@
     }
 
     &:checked + .slider__span::after {
-      width: 23px;
-      height: 23px;
+      width: 20px;
+      height: 20px;
       margin: 0;
-      top: -1.2px;
-      left: -0.1px;
+      top: 0;
+      left: 0;
       opacity: 1;
       background-color: #83e80a;
       border: none;
