feat: написать логику отображения поля с хобби/фото
В app.js написать логику взаимодействия с узлами DOM
скрывать узлы добавлением селектора hidden

--- a/src/blocks/input/input.scss
+++ b/src/blocks/input/input.scss
@@ -2,6 +2,10 @@
   display: flex;
   flex-flow: column-reverse;
 
+  &_hidden {
+    display: none;
+  }
+
   &__label,
   &__field {
     transition: all 0.2s;
